# mystore

./: App.tsx  DEPLOY_CHECKLIST.md  cloudbuild.yaml  constants.ts  deploy.sh  firestore.rules  index.html  index.tsx  metadata.json  policy.txt
bigquery/: shipments_ddl.sql
components/: ChatWindow.tsx  ExamplePrompts.tsx  Header.tsx  MessageBubble.tsx  icons.tsx
hooks/: useGeminiChat.ts
smart_store_backend/: .env  Dockerfile  README_BACKEND.md  cloudbuild.yaml  pyproject.toml
smart_store_backend/app/: config.py  deps.py  main.py
smart_store_backend/app/api/: auth.py  chat.py  products.py  upload.py
smart_store_backend/app/tasks/: xlsx_worker.py
smart_store_backend/app/utils/: ai_client.py  file_handler.py
smart_store_backend/services/: New Text Document.txt  secrets_loader.py
